--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 # Root CMake file
 cmake_minimum_required(VERSION 3.12)
-#set(VCPKG_CRT_LINKAGE static)
-#set(VCPKG_LIBRARY_LINKAGE static)
-#set(VCPKG_TARGET_TRIPLET "x64-windows-static" CACHE STRING "Vcpkg target triplet (ex. x86-windows)")
 
+# set(VCPKG_CRT_LINKAGE static)
+# set(VCPKG_LIBRARY_LINKAGE static)
+# set(VCPKG_TARGET_TRIPLET "x64-windows-static" CACHE STRING "Vcpkg target triplet (ex. x86-windows)")
 if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
     set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
         CACHE STRING "")
@@ -16,29 +16,31 @@ option(BUILD_SHARED_LIBS "Build libraries as shared libraries" OFF)
 option(USC_GNU_WERROR "Set Werror for gcc." OFF)
 
 project(USC VERSION 0.5.0)
+
 if(WIN32 AND ${CMAKE_VERSION} VERSION_GREATER "3.12")
     cmake_policy(SET CMP0079 NEW)
 endif()
+
 # Project configurations
 set(CMAKE_CONFIGURATION_TYPES Debug Release)
 set(CMAKE_DEBUG_POSTFIX _Debug)
 set(CMAKE_RELEASE_POSTFIX _Release)
 execute_process(COMMAND git log -1 --date=short --format="%cd_%h"
-                OUTPUT_VARIABLE GIT_DATE_HASH
-                ERROR_QUIET
-                OUTPUT_STRIP_TRAILING_WHITESPACE)
-
+    OUTPUT_VARIABLE GIT_DATE_HASH
+    ERROR_QUIET
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
 
 # Set output folders
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
-    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/bin )
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/bin )
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/lib )
-endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
+
+foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
+    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/bin)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/bin)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/lib)
+endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
 
 set(CMAKE_MACOSX_RPATH 1)
 
@@ -60,7 +62,7 @@ find_package(Iconv REQUIRED)
 # this is mainly for windows functions either being defined to call A or W prefixed functions
 add_definitions(-DUNICODE -D_UNICODE)
 
-#https://stackoverflow.com/questions/60041896/reuse-target-compile-options-from-variable-for-multiple-targets-cmake/60047012#60047012
+# https://stackoverflow.com/questions/60041896/reuse-target-compile-options-from-variable-for-multiple-targets-cmake/60047012#60047012
 add_library(cc-common INTERFACE)
 
 if(WIN32)
@@ -70,17 +72,19 @@ endif()
 OPTION(EMBEDDED "Enable embedded build" OFF)
 
 if(EMBEDDED)
-	message("Enabling embedded build")
+    message("Enabling embedded build")
     add_definitions(-DEMBEDDED)
 endif()
 
 OPTION(CRASHDUMP "Enable collecting crash dumps" ON)
+
 if(CRASHDUMP)
     message("Enabling crash dumps")
     add_definitions(-DCRASHDUMP)
 endif()
 
 OPTION(ASAN "Build With ASAN" OFF)
+
 if(ASAN)
     target_compile_options(cc-common INTERFACE
         -fsanitize=address
@@ -107,7 +111,7 @@ add_subdirectory(Tests.Game)
 
 # Enabled project filters on windows
 if(MSVC)
-    #updater for windows
+    # updater for windows
     add_subdirectory(updater)
 
     # Use filters in VS projects
@@ -125,6 +129,7 @@ if(MSVC)
     set_target_properties(soundtouch PROPERTIES FOLDER "Third Party")
     set_target_properties(lua PROPERTIES FOLDER "Third Party")
     set_target_properties(GLEW PROPERTIES FOLDER "Third Party")
+    set_target_properties(kson PROPERTIES FOLDER "Third Party")
 
     # My libraries in the libraries folder
     set_target_properties(Shared PROPERTIES FOLDER Libraries)
@@ -137,5 +142,4 @@ if(MSVC)
     set_target_properties(Tests PROPERTIES FOLDER "Tests")
     set_target_properties(Tests.Shared PROPERTIES FOLDER "Tests")
     set_target_properties(Tests.Game PROPERTIES FOLDER "Tests")
-
 endif(MSVC)
