--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "third_party/miniaudio"]
 	path = third_party/miniaudio
 	url = https://github.com/dr-soft/miniaudio.git
+[submodule "third_party/libkson"]
+	path = third_party/libkson
+	url = https://github.com/m4saka/libkson.git
