--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
 	"files.associations": {
 		"chrono": "cpp",
-		"type_traits": "cpp"
+		"type_traits": "cpp",
+		"charconv": "cpp",
+		"cmath": "cpp",
+		"format": "cpp",
+		"memory": "cpp",
+		"variant": "cpp",
+		"*.ipp": "cpp"
 	}
 }
