added openssl + new fg lay in bg - added openssl - additional fg layers, callable from bg.lua - lua getters for nvg proj mat - lua bind for game camera mat - z component for lua critline - clamped exiting hold and laser mesh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ find_package(Vorbis REQUIRED)
 find_package(OGG REQUIRED)
 find_package(LibArchive REQUIRED)
 find_package(Iconv REQUIRED)
+find_package(OpenSSL REQUIRED)
 
 # All projects use unicode define
 # this is mainly for windows functions either being defined to call A or W prefixed functions
